* Fixed dentry leaks in lazyfs.

* Lazyfs now notices updates to directories without needing them to be
  explicitly opened.

* When a directory has changed size or mtime, don't create a new inode.

* Lots more test cases to check each of the fixed bugs.


Changes since 0.1.11:

* The index is now fetches as '.0inst-index.tgz' rathen than as '.xml'.
  This is faster (since it's compressed) and will allow us to send the
  digital signature and key at the same time in future.

* Make /uri/0install the mount-point, rather than /uri.
  (compatibility symlinks from /uri/http and /uri/0http are created for
   the change-over).

* 0test has been updated and slightly improved.


Changes since 0.1.10:

* There is now one index file per site, not one per directory.

* Sometimes when a download finished, 0show wasn't notified.

* Added a test system.

* Use RELAX NG to validate XML files.

* Lazyfs improvements:

	- Better diagnostics.

	- Should be better at detecting incompatible kernel versions.

	- Replaced old buggy readdir routine with generic dcache version.

	- Used to BUG if the helper released a dentry that noone else was
	  using.

* Use libxml instead of libexpat for XML parsing.

* Helper doesn't pass request handles to child (wget) processes, so they
  get closed at the right time.

* Scheme name is now '0http', not 'http'.

* New 'task' abstraction handles dependancies between tasks better (eg,
  a file request depends on an index fetch followed by an archive fetch).

* Push updates to 0show-type clients at next poll, not each time something
  changes.

Changes since 0.1.9:

* Lots of changes to the build process and layout:

  - Linux subdirectory with Linux-specific bits.
  - Uses automake.
  - 'make install' target unloads old module an unmounts /uri
  - 'make uninstall' removes entry from fstab
  - 0show, 0refresh and zero-install binaries are installed
  - 0build has been moved out -- it is now provided via zero-install itself
